# paper-sonar

./: .gitignore  README.md  README_ja.md  pyproject.toml
data/: iclr2025.json:Zone.Identifier
src/app_v1/: app.py
src/app_v2/: app.py  requirements.txt
src/build_db/: __main__.py  json2txt.py
src/run/: __main__.py
src/scrape/: __main__.py
src/suggest/: __main__.py
